# ampl

./: .gitignore  LICENSE  README.md  README_HPC.md  README_anaconda.md  README_dev.md  README_git.md  __init__.py  pyproject.toml  requirements.txt  settings.json
examples/: ampl.pbs  concrete_example_dt.py  concrete_example_nn.py  create_config_api_example.py
src/ampl/: __init__.py  __main__.py  cli.py  config.py  constant(Conflict_2024-07-25 09-56-55).py  constant.py  data.py  default_config.yml  enums.py  eval.py  feature_importance.py  infer.py  optuna.py  pipelinestep.py  state.py  util.py
src/ampl/convolutional_neural_network/: __init__.py  model_build(Conflict_2024-07-25 09-56-55).py  model_build.py  model_ensemble(Conflict_2024-07-25 09-56-55).py  model_ensemble.py  model_eval.py  optuna(Conflict_2024-07-25 09-56-55).py  optuna.py  optuna_bak  pipeline.py  util(Conflict_2024-07-25 09-56-55).py  util.py
src/ampl/decision_tree/: __init__.py  model_build.py  model_ensemble.py  model_eval.py  optuna.py  optuna_options.py  pipeline.py
src/ampl/neural_network/: __init__.py  infer.py  model_build.py  model_ensemble.py  model_eval.py  model_infer.py  optuna.py  pipeline.py  util.py
tests/: __init__.py  test_cli.py  test_config_file.py  test_data.py  test_feature_importance.py  test_json.py  test_model_build.py  test_nn.py  test_pipeline_dt.py  test_pipeline_nn.py  test_state.py  test_util.py
tests/data/: concrete.csv  data.ipynb  pipeline_config.yml  pipeline_config_2.yml
